--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+body {
+    font-family: 'Poppins', sans-serif;
+    color:#0468BF;
+}
+
+.button {
+    background-color: #0468BF;
+    color: white;
+    border-radius: 28px;
+    width: 150px;
+    height: 60px;
+    border: 0px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+}
+.button:hover{
+    background-color: #034C8C;
+}
+
 .container {
     display: flex;
     justify-content: center;
